fix: navbar flickering when reaches top from bottom

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -101,7 +101,7 @@ html::-webkit-scrollbar-thumb {
   -webkit-box-shadow: 0 3px 1rem rgba(0, 0, 0, 0.1) !important;
   box-shadow: 0 3px 1rem rgba(0, 0, 0, 0.1) !important;
   height: 3.9rem;
-  width: 100% !important;
+  /* width: 100% !important; */
   -webkit-transition: 0.2s ease-in-out !important;
   transition: 0.2s ease-in-out !important;
   backdrop-filter: blur(50px);
@@ -128,6 +128,7 @@ html::-webkit-scrollbar-thumb {
 .glassBackground {
   /* background: rgba(255, 255, 255, 0.1); */
   -webkit-backdrop-filter: blur(50px);
+  -moz-backdrop-filter: blur(50px);
   backdrop-filter: blur(50px);
   background-clip: border-box;
   font-family: "Space Grotesk", sans-serif;
